working on css, prob gonna break everything.

--- a/views/activities.hbs
+++ b/views/activities.hbs
@@ -1,8 +1,7 @@
-<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?v=3.exp&signed_in=false&libraries=places"></script>
 
 
-<h1>stuff</h1>
-<p>{{test}}</p>
+<h1>Create Your Trip!</h1>
+
 <!-- <div>
 <form class="activities" method='get' action='/activities'>
   <input type="text" placeholder="what you wanna do" id="activity">
