--- a/views/itinerary.hbs
+++ b/views/itinerary.hbs
@@ -1,20 +1,11 @@
-<script src="http://code.jquery.com/jquery-1.10.2.js"></script>
-<script src="http://code.jquery.com/ui/1.10.4/jquery-ui.js"></script>
 
 <h2>Results</h2>
 
 <p>{{trips.name}}</p>
 <p>{{trips.user}}</p>
-<!-- <ul id="mysort1">
-{{# each trips.activities}}
-<li class="mylist">{{this.place_name}}</li>
-<li class="mylist">{{this.address}}</li>
-<li class="mylist">{{this.icon}}</li>
-<li class="mylist">{{this.placeid}}</li>
-{{/each}}
-</ul> -->
 
-<div id="mysort1">
+
+<div id="mysort1" >
   {{# each trips.activities}}
   <div class="mylist">
     <image src={{this.icon}}>
@@ -50,7 +41,7 @@
 
 <a id="new_day" href=''>add new day</a>
 
-<div id="map-canvas" style="visibility: hidden "></div>
+<div id="map-canvas"></div>
 
 <script type="text/javascript">
 var day_counter = 5
@@ -95,4 +86,250 @@ $(function () {
   //     dropOnEmpty: false
   //  });
 });
+
+var map
+var infowindow
+var markers = []
+var windows = []
+
+function initialize() {
+  geocoder = new google.maps.Geocoder()
+
+  var dc = new google.maps.LatLng(38.9047, 77.0164);
+  map = new google.maps.Map(document.getElementById('map-canvas'), {
+    center: dc,
+    zoom: 14
+  });
+
+
+  var request = {
+    location: dc,
+    radius: 1000,
+    keyword: "General Assembly"
+  };
+  infowindow = new google.maps.InfoWindow();
+  var service = new google.maps.places.PlacesService(map);
+  service.nearbySearch(request, callback);
+}
+
+function callback(results, status) {
+  if (status == google.maps.places.PlacesServiceStatus.OK) {
+    for (var i = 0; i < results.length; i++) {
+      createMarker(results[i]);
+    }
+  }
+}
+
+function clearMarkers(){
+  if(markers){
+    for (i in markers){
+        markers[i].setMap(null)
+
+    }
+    markers = []
+    windows = []
+  }
+}
+
+function clearWindows() {
+    if (windows) {
+        for (i in windows) {
+            if (windows[i].getMap()) {
+                windows[i].close();
+            }
+        }
+    }
+}
+
+function createMarker(place) {
+  // var placeLoc = place.geometry.location;
+  var marker = new google.maps.Marker({
+    map: map,
+    position: place.geometry.location,
+    title: place.name,
+    rating: place.rating
+  });
+
+  markers.push(marker);
+
+
+var infowindow = new google.maps.InfoWindow({
+	content: '<img src="' + place.icon + '" /><font style="color:#000;">' + place.name +
+	'<br />Rating: ' + place.rating + '<br />Vicinity: ' + place.vicinity + '</font>' + "<div id='add'><a href=#>Add to my trip</a></div>"
+	    })
+
+  var activity_data = { place_name: place.name,
+               rating: place.rating,
+               icon: place.icon,
+               address: place.vicinity,
+               placeid: place.place_id }
+  // , place.icon, place.rating, place.vicinity, place.place_id
+
+      // google.maps.event.addListener(infowindow, 'domready', function() {
+      //     document.getElementById("add").addEventListener("click", function(e) {
+              // e.stop()
+          // document.getElementById('place_name').value = place_name
+          // {trip_id: ???, activity:
+          // {activities: [{place_name: place_name}]},
+      //     $.ajax({
+      //       type: 'POST',
+      //       data: {activities: [activity_data]},
+      //       dataType: 'json',
+      //       url: "/trips"
+      //     }).done(function(response){
+      //       console.log("ajaxed", response)
+      //     }).fail(function(){
+      //       console.log("failed to save")
+      //     })
+      //
+      //
+      //     })
+      // })
+  // var trip_data =
+  google.maps.event.addListener(infowindow, 'domready', function() {
+      var current_id = document.getElementById("current_trip_id").innerHTML
+      document.getElementById("add").addEventListener("click", function(e) {
+        $.ajax({
+          type: 'PUT',
+          data: {data: activity_data, id: current_id},
+          dataType: 'json',
+          url: "/activities"
+        }).done(function(response){
+          console.log("ajaxed", response)
+        }).fail(function(){
+          console.log("failed to save")
+        })
+      })
+  })
+  google.maps.event.addListener(marker, 'click', function() {
+    // infowindow.setContent(place.name);
+    clearWindows();
+    infowindow.open(map, this)
+  })
+  windows.push(infowindow)
+}
+
+function findAddress(){
+  var address = document.querySelector("#gmap_where").value
+  geocoder.geocode( { 'address': address}, function(results, status) {
+    if (status == google.maps.GeocoderStatus.OK) {
+      var addrLocation = results[0].geometry.location;
+      map.setCenter(addrLocation);
+
+      document.getElementById('lat').value = results[0].geometry.location.lat()
+      document.getElementById('lng').value = results[0].geometry.location.lng()
+
+      var addrMarker = new google.maps.Marker({
+                position: addrLocation,
+                map: map,
+                title: results[0].formatted_address
+    })
+  }
+})
+}
+
+function findPlaces() {
+
+	    // prepare variables (filter)
+	    // var type = document.getElementById('gmap_type').value;
+	    // var radius = document.getElementById('gmap_radius').value;
+	    var keyword = document.getElementById('gmap_keyword').value;
+
+	    var lat = document.getElementById('lat').value;
+	    var lng = document.getElementById('lng').value;
+      var cur_location = new google.maps.LatLng(lat, lng);
+
+	    // prepare request to Places
+	    var request = {
+          key: "AIzaSyBfu9hLoL5W9W3FnppbyA_80t_Jc0L9uWw",
+	        location: cur_location,
+	        radius: 5000,
+	        keyword: [keyword]
+	    };
+    // if (keyword) {
+    //     request.keyword = [keyword];
+	  //   }
+
+	    // send request
+	    service = new google.maps.places.PlacesService(map);
+	    service.search(request, createMarkers);
+}
+function createMarkers(results, status) {
+    if (status == google.maps.places.PlacesServiceStatus.OK) {
+
+        // if we have found something - clear map (overlays)
+        clearMarkers()
+
+        // and create new markers by search result
+      for (var i = 0; i < results.length; i++) {
+          createMarker(results[i]);
+        }
+    } else if (status == google.maps.places.PlacesServiceStatus.ZERO_RESULTS) {
+        alert('Sorry, nothing is found');
+    }
+}
+
+var new_search = document.querySelector("#button2")
+new_search.addEventListener('click', function(event){
+  event.preventDefault()
+     findAddress()
+  document.querySelector("#map-canvas").style.visibility = ""
+})
+
+var keyword_search = document.getElementById('keyword')
+keyword_search.addEventListener('click', function(event){
+  event.preventDefault()
+  findPlaces()
+  document.getElementById('gmap_keyword').value = ""
+})
+
+var day_map = document.querySelectorAll(".day_map")
+
+
+function addListener (array){
+  for(var i = 0; i < array.length; i++){
+    array[i].addEventListener('click', function(){
+      alert("click")
+    })
+  }
+}
+addListener(day_map)
+
+
+google.maps.event.addDomListener(window, 'load', initialize);
+    // var map;
+    //
+    // function initialize() {
+    //   // Create a map centered in Pyrmont, Sydney (Australia).
+    //   map = new google.maps.Map(document.getElementById('map-canvas'), {
+    //     center: {lat: -33.8666, lng: 151.1958},
+    //     zoom: 15
+    //   });
+    //
+    //   // Search for Google's office in Australia.
+    //   var request = {
+    //     location: map.getCenter(),
+    //     radius: '500',
+    //     query: 'Google Sydney'
+    //   };
+    //
+    //   var service = new google.maps.places.PlacesService(map);
+    //   service.textSearch(request, callback);
+    // }
+    //
+    // // Checks that the PlacesServiceStatus is OK, and adds a marker
+    // // using the place ID and location from the PlacesService.
+    // function callback(results, status) {
+    //   if (status == google.maps.places.PlacesServiceStatus.OK) {
+    //     var marker = new google.maps.Marker({
+    //       map: map,
+    //       place: {
+    //         placeId: results[0].place_id,
+    //         location: results[0].geometry.location
+    //       }
+    //     });
+    //   }
+    // }
+    //
+    // google.maps.event.addDomListener(window, 'load', initialize);
 </script>
