--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -2,8 +2,12 @@
 <html>
   <head>
     <link rel="stylesheet" type="text/css" href='/css/jquery-ui.min.css'>
+    <link rel="stylesheet" type="text/css" href='/css/styles.css'>
     <script src="/jquery/jquery.js"></script>
     <script src="/jquery/jquery-ui.min.js"></script>
+    <script src="http://code.jquery.com/jquery-1.10.2.js"></script>
+    <script src="http://code.jquery.com/ui/1.10.4/jquery-ui.js"></script>
+    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?v=3.exp&signed_in=false&libraries=places"></script>
     <style type="text/css">
      html, body, #map-canvas { height:500px; width:500px;  margin: 0; padding: 0;}
    </style>
