--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link href='http://fonts.googleapis.com/css?family=Roboto+Condensed:300' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href='/css/jquery-ui.min.css'>
     <link rel="stylesheet" type="text/css" href='/css/styles.css'>
     <script src="/jquery/jquery.js"></script>
@@ -8,8 +9,9 @@
     <script src="http://code.jquery.com/jquery-1.10.2.js"></script>
     <script src="http://code.jquery.com/ui/1.10.4/jquery-ui.js"></script>
     <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?v=3.exp&signed_in=false&libraries=places"></script>
+
     <style type="text/css">
-     html, body, #map-canvas { height:500px; width:500px;  margin: 0; padding: 0;}
+     html, body, #map-canvas { height:600px; width:100%;  margin: 0; padding: 0;}
    </style>
   </head>
 
